crates/service-sdk/tests/snapshots/golden_codegen__struct_dependencies_mixed.snap
---
source: crates/service-sdk/tests/golden_codegen.rs
expression: deps
---
[
    Projection(
        TypeId(<opaque>),
    ),
    Adapter(
        TypeId(<opaque>),
    ),
]
