crates/service-sdk/tests/snapshots/golden_codegen__struct_dependencies_single_projection.snap
---
source: crates/service-sdk/tests/golden_codegen.rs
expression: deps
---
[
    Projection(
        TypeId(<opaque>),
        "MyProjection",
    ),
]
