crates/service-sdk/tests/snapshots/golden_codegen__trait_descriptor_order_service.snap
---
source: crates/service-sdk/tests/golden_codegen.rs
expression: "<GoldenOrderServiceTag as ServiceContract>::descriptor()"
---
ServiceDescriptor {
    name: "GoldenOrderService",
    version: ContractVersion {
        major: 1,
        minor: 0,
        patch: 0,
    },
    operations: [
        OperationDescriptor {
            name: "place_order",
            input: [
                "ServiceContext",
                "String",
            ],
            output: "Result < String, GoldenOrderError >",
            errors: [
                "GoldenOrderError",
            ],
            description: None,
            metadata: {},
            idempotent: false,
            mutating: true,
        },
    ],
    description: None,
    metadata: {},
}
