crates/service-sdk/tests/snapshots/golden_codegen__trait_descriptor_payment_service.snap
---
source: crates/service-sdk/tests/golden_codegen.rs
expression: "<GoldenPaymentServiceTag as ServiceContract>::descriptor()"
---
ServiceDescriptor {
    name: "GoldenPaymentService",
    version: ContractVersion {
        major: 1,
        minor: 0,
        patch: 0,
    },
    operations: [
        OperationDescriptor {
            name: "charge",
            input: [
                "ServiceContext",
                "u64",
            ],
            output: "Result < String, ServiceError >",
            errors: [
                "ServiceError",
            ],
            description: None,
            metadata: {},
            idempotent: false,
            mutating: true,
        },
        OperationDescriptor {
            name: "refund",
            input: [
                "ServiceContext",
                "u64",
            ],
            output: "Result < String, ServiceError >",
            errors: [
                "ServiceError",
            ],
            description: None,
            metadata: {},
            idempotent: false,
            mutating: true,
        },
    ],
    description: None,
    metadata: {},
}
